syntax="proto3";
package services;
option go_package = "./;user";


message UserLoginRequest {
  string user_name = 1;
  string password = 2;
}

message UserLoginResponse {
  optional string jwt_token = 1;
  bool success = 2;
}


message UserRegisterRequest {
  string user_name = 1;
  string password = 2 ;
  string password_confirm = 3;
}


service UserSerivce {
  rpc UserLogin(UserLoginRequest) returns (UserLoginResponse){}
  rpc UserRegister(UserRegisterRequest) returns (UserLoginResponse){}
}